name:                theque
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/theque#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple

extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Theque.Thequefs.Master
                     , Theque.Thequefs.Client
                     , Theque.Thequefs.DataNode
                     , Theque.Thequefs.TagNode
                     , Theque.Thequefs.CmdLine
                     , Theque.Thequefs.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , cmdargs
                     , distributed-process
                     , distributed-process-client-server
                     , distributed-process-simplelocalnet
                     , distributed-process-extras
                     , network
                     , split
                     , stm
                     , bytestring
                     , network-transport
                     , unordered-containers
                     , hashable
                     , brisk
                     , brisk-prelude
                     , utf8-string
  default-language:    Haskell2010
  ghc-options:      -O0 -threaded -fforce-recomp -package distributed-static

executable thequefs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -package distributed-static -O0
  build-depends:       base
                     , theque
                     , unix
                     , exceptions
                     , distributed-process
                     , distributed-process-client-server
                     , distributed-process-simplelocalnet
                     , distributed-process-extras
                     , cmdargs
                     , utf8-string
  default-language:    Haskell2010

test-suite theque-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , theque
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/theque
